2013-01-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-0.9.13.
	* version.ac, Makefile.am: Adjust.

2013-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Allow subdir-objects.

2013-01-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-0.9.12.
	* version.ac: Adjust.

2013-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-0.9.11.
	* version.ac: Adjust.

2013-01-03  Khaled Hosny  <khaledhosny@eglug.org>

	Import harfbuzz-0.9.10.
	* version.ac: Adjust.

2012-12-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_BASIC to enable silent rules.

2012-12-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-0.9.8.
	* version.ac: Adjust.
	* include/Makefile.am (hdr_links): Add hb-graphite2.h.

2012-12-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* hb-blob.h hb-buffer.h hb-common.h hb-font.h hb-ot-layout.h
	hb-ot-tag.h hb-set.h hb-shape-plan.h hb-shape.h hb-unicode.h
	hb-version.h.in in harfbuzz-0.9.7/src: disable '#error' for MSVC.
	
2012-11-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-0.9.7.