@@ -4,4 +4,4 @@ dnl Copyright (C) 2012 Peter Breitenlohner <tex-live@tug.org>
 dnl You may freely use, modify and/or distribute this file.
 dnl
 ## configure options and TL libraries required for harfbuzz
-KPSE_WITH_LIB([harfbuzz], [freetype2 graphite2 icu])
+KPSE_WITH_LIB([harfbuzz], [graphite2 icu])
